source/styles/index.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    --text: #DBDBDB;
    --text2: #484D56;
    --background: #202329;
    --foreground:#262B35;
    --shadow: #14171b08;
    --primary: #FCBD25;
    --primary-shadow: #FCBD2555;
    --primary-shadow2: #FCBD2575;
    --selected: #FCBD25;
    --secondary: #10CA80;
    --secondary-shadow: #10CA8075;
    --off:#F34949;
    font-family: 'Poppins';
}


.flex{
    display: flex;
}
.justify{
    justify-content: center;
}
.align{
    align-items: center;
}
.row{
    flex-direction: row;
}
.column{
    flex-direction: column;
}


body{
    background-color: var(--background);
    width: 100vw;
    height: 100vh;
    overflow: hidden;
}



.LOADING{
    width: 100%;
    height: 100%;
    background-color: var(--background);
    display: none;
}

.ERROR{
    width: 100%;
    height: 100%;
    display: none;
}


.LOGIN{
    width: 100%;
    height: 100%;
}

.DASHBOARD{
    width: 100vw;
    height: 100vh;
    display: none;
}

.LOGS{
    width: 100%;
    height: 100%;
    display: none;
}

.NOTIFICACOES{
    width: 100%;
    height: 100%;
    display: none;
}

.CONFIGS{
    width: 100%;
    height: 100%;
    display: none;
}





.logo{
    flex: 1;
}
.logo h1{
    font-weight: 600;
    color: white;
    font-size: 2.5rem;
    text-shadow: var(--shadow) px 4px 2px; 
}
.logo img{
    width: 12%;
    margin-left: 10px;
    transform: rotate(90deg);
}


.login_inputs{
    flex: 1;
    width: 100%;
}
.login_input{
    width: 85%;
    height: 50px;
    background-color: var(--foreground);
    color: var(--text);
    outline: none;
    border: 0;
    border-radius: 12px;
    margin-bottom: 20px;
    box-shadow: var(--shadow) 0px 4px 10px;
    font-size: 14px;
    padding-left: 50px;
}
.login_input::placeholder{
    color: var(--text2);
}

.user, .lock{
    position: relative;
    top: -57px;
    left: -140px;
    font-size: 22px;
    color: var(--text2);
}



.login_btn_box{
    flex: 1.5;
    width: 100%;
}
.login_btn{
    width: 60%;
    height: 45px;
    background-color: var(--primary);
    box-shadow: var(--primary-shadow) 0px 0px 40px;
    color: var(--background);
    outline: none;
    border: 0;
    border-radius: 100px;
    font-weight: 700;
    font-size: 1rem;
}



.saldo_box{
    width: 100%;
    height: 10.5%;
}
.header{
    width: 100%;
    height: 6.5%;
    padding: 10px 15px;
    justify-content: space-between;
}
.header img{
    width: 10%;
    border-radius: 360px;
    box-shadow: #DBDBDB30 0px 0px 30px 0px;
}
.header p{
    font-weight: 500;
    font-size: 14px;
    color: var(--text);
}
.saldo{
    color: var(--text) !important;
    font-size: 3.4rem;
    margin-left: 15px;
    margin-top: -15px;
}
.saldo_box h3{
    color: var(--text);
    font-size: 1.2rem;
    font-weight: 500;
    margin-left: 15px;
    margin-top: -20px;
}



.data_box{
    width: 95%;
    height: 11%;
    justify-content: flex-start;
}
.data{
    width: 100%;
    flex: 1.7;
    height: 50px;
    outline: none;
    border: 0;
    border-radius: 12px;
    background-color: var(--foreground);
    color: var(--text);
    padding: 10px;
    font-size: 16px;
    margin-right: 15px;
}
.data::placeholder{
    color: var(--text2);
}
.buscar_data{
    width: 100%;
    flex: 1;
    height: 50px;
    outline: none;
    border: 0;
    border-radius: 12px;
    background-color: var(--primary);
    box-shadow: var(--primary-shadow) 0px 0px 30px 0px;
    font-weight: 600;
    font-size: 1.2rem;
    color: var(--background);
}




.status_boxes{
    width: 95%;
    height: 63%;
}
.status_box{
    width: 100%;
    flex: 1;
    margin-bottom: 20px;
    background-color: var(--foreground);
    border-radius: 15px;
    padding: 10px;
}
.status_texts{
    flex: 2;
    height: 100%;
    padding: 5px 5px;
    justify-content: space-between;
}
.status_title p{
    color: var(--text);
    font-weight: 600;
    font-size: 1.2rem;
}
.status_title div{
    height: 3px;
    border-radius: 10px;
    background-color: var(--primary);
}
.lines{
    height: 50%;
    justify-content: space-between;
    color: var(--text);
    font-weight: 400;
    font-size: 0.8rem;
}
.dot{
    width: 15px;
    height: 15px;
    border-radius: 360px;
    margin-right: 8px;
}
.dot_green{
    background-color: var(--secondary);
    box-shadow: var(--secondary-shadow) 0px 0px 20px;
}
.dot_yellow{
    background-color: var(--primary);
    box-shadow: var(--primary-shadow2) 0px 0px 20px;
}
.status_graph{
    flex: 1;
    height: 100%;
}

@keyframes growProgressBar {
    0%, 33% { --pgPercentage: 0; }
    100% { --pgPercentage: var(--value); }
}
@property --pgPercentage {
    syntax: '<number>';
    inherits: false;
    initial-value: 0;
}
div[role="progressbar"] {
    --size: 7rem;
    --pgPercentage: var(--value);
    animation: growProgressBar 2s 1 forwards;
    width: var(--size);
    height: var(--size);
    border-radius: 50%;
    display: grid;
    place-items: center;
    background: 
        radial-gradient(closest-side, var(--foreground) 70%, transparent 0 99.9%, var(--foreground) 0),
        conic-gradient(var(--primary) calc(var(--pgPercentage) * 1%), var(--secondary) 0)
        ;
}


.lucro{
    color: var(--primary);
    font-size: 2.5rem;
    font-weight: 600;
}



.footer{
    width: 95%;
    height: 7%;
    border-radius: 15px;
    background-color: var(--foreground);
    justify-content: space-around;
}
.footer ion-icon{
    flex: 1;
    padding: 3.9%;
    border-radius: 15px;
    font-size: 30px;
    --ionicon-stroke-width: 40px;
    color:var(--text)
}
.footer_selected{
    background-color: var(--selected);
    color: var(--foreground) !important;
}



.logs_container{
    width: 100%;
    height: 84.5%;
}
.logs_box{
    background-color: var(--foreground);
    width: 95%;
    height: 93%;
    padding: 10px 15px;
    border-radius: 12px;
    color: var(--text2);
}



.notify_container{
    width: 100%;
    height: 84.5%;
}



.config_container{
    width: 100%;
    height: 84.5%;
    padding: 25px 0px;
}
.conf{
    width: 92.5%;
    height: 8%;
    justify-content: space-between;
}

.conf p{
    color: var(--text);
    font-size: 1.2rem;
}
.stop_win_box{
    width: 60%;
    justify-content: space-between;
}
.stop_win{
    width: 100%;
    flex: 1;
    height: 40px;
    outline: none;
    border: 0;
    border-radius: 12px;
    background-color: var(--foreground);
    color: var(--text);
    padding: 10px;
    font-size: 16px;
    margin-right: 15px;
    text-align: center;
}
.stop_win::placeholder{
    color: var(--text2);
}
.send_stopwin{
    width: 100%;
    flex: 1;
    height: 40px;
    outline: none;
    border: 0;
    border-radius: 12px;
    background-color: var(--secondary);
    font-weight: 600;
    font-size: 1.2rem;
    color: var(--background);
}

/*  SWITCH  */
.switch{
    width:20%;
    -webkit-tap-highlight-color: transparent;
}
.switch-div{
    margin-left: -68px;
    margin-top: -20px;
    width:8%;
}
.switch input[type=checkbox]{
    height:0;
    width:0;
    visibility: hidden;
}
.switch label{
    cursor: pointer;
    text-indent: -99999px;
    width:73.3px;
    height:31.3px;
    background-color: var(--foreground);
    display: block;
    border-radius: 100px;
    position: relative;
}
.switch input:checked+label:after{
    left:calc(100% - 5px);
    transform: translateX(-100%);
    background-color: var(--secondary);
}
.switch label:after{
    content: '';
    position: absolute;
    top:4.5px;
    left:8px;
    width:22px;
    height:22px;
    background-color: var(--off);
    border-radius: 90px;
    transition: 0.3s;
}

.logout{
    position: absolute;
    bottom: 12%;
    width: 95%;
    height: 50px;
    outline: none;
    border: 0;
    border-radius: 7px;
    background-color: var(--off);
    font-weight: 700;
    font-size: 1.5rem;
    color: var(--background);
}

